--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         <h2>Projects</h2>
         <div class="projects-grid">
             <div class="project-card project-animate">
-                <img src="project1.jpg" alt="Scientific Calculator">
+                <img src="calculator_7182540.png" alt="Scientific Calculator">
                 <h3>GUI-based Scientific Calculator</h3>
                 <p>A desktop application built with Python and Tkinter for performing scientific calculations with an intuitive user interface.</p>
                 <a href="https://github.com/DibyajyotiParida21/Scientific-Calculator" target="_blank">View Project</a>
             </div>
             <div class="project-card project-animate">
-                <img src="project2.jpg" alt="Parkinson's Dataset ML">
+                <img src="database-file_3518883.png" alt="Parkinson's Dataset ML">
                 <h3>ML Models on Parkinson's Dataset</h3>
                 <p>Analyzed Parkinson’s disease dataset and applied multiple ML algorithms to evaluate performance and identify key patterns.</p>
                 <a href="https://github.com/DibyajyotiParida21/Parkinson-s-dataset-GUI-project" target="_blank">View Project</a>
@@ -101,6 +101,7 @@
 
 </body>
 </html>
+
 
 
 
